--- a/custom.css
+++ b/custom.css
@@ -200,3 +200,177 @@ br + input[type="submit"].wpcf7-form-control.wpcf7-submit {
 	line-height: 20px;
 	text-transform: uppercase;
 }
+
+
+/* custom styles for mobile menu */
+#header .search-toggle{
+	display: none;
+}
+
+@media (max-width: 768px) {
+	#header #navigation.header__categories-wrapper {
+		flex-direction: column;
+	}
+
+	#header{
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		display: flex;
+		justify-content: space-between;
+		margin: 0;
+		padding: 0;
+		height: 46px;
+		z-index: 900;
+		background-color: #ffffff;
+		box-shadow: 0px 1px 12px 3px #676363;
+		border: none;
+	}
+	/*if admin:*/
+	/*.logged-in.admin-bar #header{*/
+	/*	top: 46px;*/
+	/*}*/
+	#header hgroup{
+		margin: 0;
+		display: flex;
+		height: 100%;
+		padding-right: 56px;
+	}
+	#header #logo{
+		margin: 0;
+		font-size: 32px;
+	}
+
+	#logo .logo__title{
+		padding-left: 3px;
+		font-size: 1em;
+		line-height: 1;
+	}
+	#logo .logo__description {
+		padding-left: 6px;
+		font-size: .35em;
+		line-height: 1px;
+	}
+	#header .nav-toggle{
+		top: 1px;
+		right: 3px;
+		display: block;
+		margin: 1px;
+		width: 40px;
+		height: 34px;
+		z-index: 1100;
+	}
+	/* menu window */
+	#header #navigation {
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		align-items: center;
+		margin: 0;
+		overflow-y: auto;
+		padding: 2em;
+		z-index: 1000;
+	}
+	/* search button and search bar */
+	#header .search-toggle{
+		display: block;
+		margin: 2px 0 2px auto;
+		width: 46px;
+		height: 42px;
+		border: darkgray 2px solid;
+		-webkit-border-radius: 3px;
+		-moz-border-radius: 3px;
+		border-radius: 3px;
+		background-color: #ffffff;
+		background-image: url("images/icons/search.svg");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: auto 90%;
+
+	}
+
+	#top .wc-nav li.search{
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		width: 100%;
+		height: 46px;
+		border-bottom: 1px solid #ffffff;
+		float: none;
+		display: flex;
+		background-color: #ffffff;
+		transition: all .3s ease-in-out;
+		z-index: 890;
+	}
+	#top .search #searchform{
+		width: 100%;
+		display: flex;
+	}
+	#top .search #searchform .input-text {
+		flex-grow: 1;
+	}
+	#top .wc-nav li.search.--shown{
+		transform: translateY(46px);
+		box-shadow: 0px 1px 12px 3px #676363;
+	}
+
+
+
+
+	/* fixed footer */
+	.site-contacts{
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		display: flex;
+		margin: 0;
+		padding: 0;
+		height: 46px;
+		z-index: 900;
+		background-color: #ffffff;
+		box-shadow: 0px 1px 12px 3px #676363;
+	}
+	.site-contacts>a,
+	.site-contacts>div{
+		flex: 1 1 23%;
+	}
+	.site-contacts__link:not(.--call-back){
+		display: block;
+		height: 44px;
+		/*width: 48px;*/
+		margin: 1px auto;
+		font-size: 0;
+		border: darkgray .3px solid;
+		-webkit-border-radius: 3px;
+		-moz-border-radius: 3px;
+		border-radius: 3px;
+		/*background-image: url("images/icons/email.svg");*/
+		background-repeat: no-repeat;
+		background-position: center;
+	}
+	.site-contacts__link.--email{
+		background-image: url("images/icons/email.svg");
+	}
+	.site-contacts__link.--tel{
+		background-image: url("images/icons/phone-call.svg");
+		background-size: auto 80%;
+	}
+	.site-contacts__link.--whatsapp{
+		background-image: url("images/icons/whatsapp.svg");
+		background-size: auto 115%;
+	}
+	.site-contacts__link.--call-back{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-basis: 31%;
+		margin: 1px;
+		font-size: 14px;
+		line-height: 1.25em;
+	}
+}
